--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
 		</dependency>
 	</dependencies>
 
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<version>2.15.2</version>
+	</dependency>
+
 	<build>
 		<plugins>
 			<plugin>
