--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,23 +4,23 @@ spring:
   application:
     name: scaffolding
   datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-    username: sa
-    password: password
-  h2:
-    console:
-      enabled: true
+    url: jdbc:sqlserver://inv-prod-eu2-sqlmi-newplataforma-qa.12bd9ac29611.database.windows.net;databaseName=MAESTRA
+    username: Bit512
+    password: InVimA20#24Mt
+    hikari:
+      maximum-pool-size: 20
+      class-loader: com.microsoft.sqlserver.jdbc.SQLServerDriver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
+        default_schema: dbo
         format_sql: true
         show_sql: true
-        dialect: org.hibernate.dialect.H2Dialect
+        dialect: org.hibernate.dialect.SQLServerDialect
   security:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:8080/realms/invima
+          issuer-uri: https://keycloak-infra-transversal.apps.ocp4.invima.gov.co/auth/realms/Invima
